@@ -24,7 +24,6 @@
 
 #include <algorithm>
 #include <chrono>
-#include <ctime>
 #include <functional>
 #include <list>
 #include <memory>
@@ -257,11 +256,6 @@ struct addon_settings {
 	// Indicates the number of milliseconds to subtract to an EDL end value
 	int recording_edl_end_padding;
 
-	// verbose_transfer_logging
-	//
-	// Flag indicating that verbose information should be logged during transfers
-	bool verbose_transfer_logging;
-
 	// disable_realtime_indicator
 	//
 	// Flag indicating that the IsRealTimeStream function should always return false
@@ -362,7 +356,6 @@ static addon_settings g_settings = {
 	"",						// recording_edl_folder
 	0,						// recording_edl_start_padding
 	0,						// recording_edl_end_padding
-	false,					// verbose_transfer_logging
 	false,					// disable_realtime_indicator
 };
 
@@ -1026,121 +1019,6 @@ static void log_notice(_args&&... args)
 	log_message(ADDON::addon_log_t::LOG_NOTICE, std::forward<_args>(args)...);
 }
 
-// log_transfer_channel
-//
-// Logs a transfer of a PVR_CHANNEL structure
-static void log_transfer_channel(PVR_CHANNEL const& channel)
-{
-	log_notice("Transferred PVR_CHANNEL: channel=", channel.iChannelNumber, ".", channel.iSubChannelNumber, " channelname=", channel.strChannelName, 
-		" encrypted=", (channel.iEncryptionSystem) ? "true" : "false");
-}
-
-// log_transfer_channelgroup
-//
-// Logs a transfer of a PVR_CHANNEL_GROUP structure
-static void log_transfer_channelgroup(PVR_CHANNEL_GROUP const& group)
-{
-	log_notice("Transferred PVR_CHANNEL_GROUP: groupname=", group.strGroupName);
-}
-
-// log_transfer_channelgroupmember
-//
-// Logs a transfer of a PVR_CHANNEL_GROUP_MEMBER structure
-static void log_transfer_channelgroupmember(PVR_CHANNEL_GROUP_MEMBER const& member)
-{
-	char channel[16]= {'\0'};				// Buffer for converted channelid
-
-	union channelid channelid;
-	channelid.value = static_cast<int>(member.iChannelUniqueId);
-
-	// Convert the channel id back into component parts
-	snprintf(channel, std::extent<decltype(channel)>::value, "%d.%d", channelid.parts.channel, channelid.parts.subchannel);
-
-	log_notice("Transferred PVR_CHANNEL_GROUP_MEMBER: channel=", channel, " groupname=", member.strGroupName);
-}
-
-// log_transfer_epgtag
-//
-// Logs a transfer of an EPG_TAG structure
-static void log_transfer_epgtag(EPG_TAG const& tag)
-{
-	char channel[16]= {'\0'};				// Buffer for converted channelid
-	char starttime[24] = {'\0'};				// Buffer for converted time_t
-	char endtime[24] = {'\0'};				// Buffer for converted time_t
-
-	union channelid channelid;
-	channelid.value = static_cast<int>(tag.iChannelNumber);
-
-	// Convert the channel id back into component parts
-	snprintf(channel, std::extent<decltype(channel)>::value, "%d.%d", channelid.parts.channel, channelid.parts.subchannel);
-
-	// Convert both time_t values into "YYYY-MM-DDTHH:MM:SSZ"
-	strftime(starttime, std::extent<decltype(starttime)>::value, "%FT%TZ", gmtime(&tag.startTime));
-	strftime(endtime, std::extent<decltype(endtime)>::value, "%FT%TZ", gmtime(&tag.endTime));
-
-	log_notice("Transferred EPG_TAG: channel=", channel, " title=", tag.strTitle, " starttime=", starttime, " endtime=", endtime);
-}
-
-// log_transfer_recording
-//
-// Logs a transfer of a PVR_RECORDING structure
-static void log_transfer_recording(PVR_RECORDING const& recording)
-{
-	char recordingtime[24] = {'\0'};			// Buffer for converted time_t
-
-	// Convert the time_t value into "YYYY-MM-DDTHH:MM:SSZ"
-	strftime(recordingtime, std::extent<decltype(recordingtime)>::value, "%FT%TZ", gmtime(&recording.recordingTime));
-
-	log_notice("Transferred PVR_RECORDING: directory=", recording.strDirectory, " title=", recording.strTitle, " episodename=", recording.strEpisodeName, 
-		" series=", recording.iSeriesNumber, " episode=", recording.iEpisodeNumber, " recordingtime=", recordingtime);
-}
-
-// log_transfer_timer
-//
-// Logs a transfer of a PVR_TIMER structure
-static void log_transfer_timer(PVR_TIMER const& timer)
-{
-	char type[24]= {'\0'};					// Buffer for the timer type string
-	char state[24]= {'\0'};					// Buffer for the timer state string
-	char channel[16]= {'\0'};				// Buffer for converted channelid
-	char starttime[24] = {'\0'};			// Buffer for converted time_t
-	char endtime[24] = {'\0'};				// Buffer for converted time_t
-
-	union channelid channelid;
-	channelid.value = static_cast<int>(timer.iClientChannelUid);
-
-	// Convert the timer type into a readable string
-	switch(timer.iTimerType) {
-
-		case timer_type::datetimeonlyrule:		snprintf(type, std::extent<decltype(type)>::value, "datetimeonlyrule"); break;
-		case timer_type::datetimeonlytimer:		snprintf(type, std::extent<decltype(type)>::value, "datetimeonlytimer"); break;
-		case timer_type::epgdatetimeonlyrule:	snprintf(type, std::extent<decltype(type)>::value, "epgdatetimeonlyrule"); break;
-		case timer_type::epgseriesrule:			snprintf(type, std::extent<decltype(type)>::value, "epgseriesrule"); break;
-		case timer_type::seriesrule:			snprintf(type, std::extent<decltype(type)>::value, "seriesrule"); break;
-		case timer_type::seriestimer:			snprintf(type, std::extent<decltype(type)>::value, "seriestimer"); break;
-		default:								snprintf(type, std::extent<decltype(type)>::value, "unknown"); break;
-	}
-
-	// Convert the timer state into a readable string; only values supported by this PVR are converted
-	switch(timer.state) {
-
-		case PVR_TIMER_STATE::PVR_TIMER_STATE_SCHEDULED: snprintf(state, std::extent<decltype(state)>::value, "scheduled"); break;
-		case PVR_TIMER_STATE::PVR_TIMER_STATE_RECORDING: snprintf(state, std::extent<decltype(state)>::value, "recording"); break;
-		case PVR_TIMER_STATE::PVR_TIMER_STATE_COMPLETED: snprintf(state, std::extent<decltype(state)>::value, "completed"); break;
-		default: snprintf(state, std::extent<decltype(state)>::value, "unknown"); break;
-	}
-
-	// Convert the channel id back into component parts or use 'any' if set to PVR_TIMER_ANY_CHANNEL
-	if(timer.iClientChannelUid == PVR_TIMER_ANY_CHANNEL) snprintf(channel, std::extent<decltype(channel)>::value, "any");
-	else snprintf(channel, std::extent<decltype(channel)>::value, "%d.%d", channelid.parts.channel, channelid.parts.subchannel);
-
-	// Convert both time_t values into "YYYY-MM-DDTHH:MM:SSZ"
-	strftime(starttime, std::extent<decltype(starttime)>::value, "%FT%TZ", gmtime(&timer.startTime));
-	strftime(endtime, std::extent<decltype(endtime)>::value, "%FT%TZ", gmtime(&timer.endTime));
-
-	log_notice("Transferred PVR_TIMER: type=", type, " state=", state, " channel=", channel, " starttime= ", starttime, " endtime=", endtime);
-}
-
 // mincount_enum_to_bytes
 //
 // Converts the minimum read count enumeration values into a number of bytes
@@ -1218,19 +1096,6 @@ static bool try_getepgforchannel(ADDON_HANDLE handle, PVR_CHANNEL const& channel
 		// Pull a database connection out from the connection pool
 		connectionpool::handle dbhandle(g_connpool);
 
-		// Log the request if verbose_disovery_logging has been enabled
-		if(settings.verbose_transfer_logging) {
-
-			char strstart[24] = {'\0'};				// Buffer for converted time_t
-			char strend[24] = {'\0'};				// Buffer for converted time_t
-
-			// Convert both time_t values into "YYYY-MM-DDTHH:MM:SSZ"
-			strftime(strstart, std::extent<decltype(strstart)>::value, "%FT%TZ", gmtime(&start));
-			strftime(strend, std::extent<decltype(strend)>::value, "%FT%TZ", gmtime(&end));
-
-			log_notice(__func__, ": Guide data requested for channel ", channel.strChannelName, ": start=", strstart, " end=", strend);
-		}
-
 		// Enumerate all of the guide entries in the database for this channel and time frame
 		enumerate_guideentries(dbhandle, channelid, start, end, settings.prepend_episode_numbers_in_epg, [&](struct guideentry const& item) -> void {
 
@@ -1286,9 +1151,8 @@ static bool try_getepgforchannel(ADDON_HANDLE handle, PVR_CHANNEL const& channel
 			// iFlags
 			epgtag.iFlags = EPG_TAG_FLAG_IS_SERIES;
 
-			// Transfer the EPG_TAG structure over over to Kodi and log if enabled
+			// Transfer the EPG_TAG structure over to Kodi
 			g_pvr->TransferEpgEntry(handle, &epgtag);
-			if(settings.verbose_transfer_logging) log_transfer_epgtag(epgtag);
 		});
 	}
 	
@@ -1389,7 +1253,6 @@ ADDON_STATUS ADDON_Create(void* handle, void* props)
 			if(g_addon->GetSetting("recording_edl_folder", strvalue)) g_settings.recording_edl_folder.assign(strvalue);
 			if(g_addon->GetSetting("recording_edl_start_padding", &nvalue)) g_settings.recording_edl_start_padding = nvalue;
 			if(g_addon->GetSetting("recording_edl_end_padding", &nvalue)) g_settings.recording_edl_end_padding = nvalue;
-			if(g_addon->GetSetting("verbose_transfer_logging", &bvalue)) g_settings.verbose_transfer_logging = bvalue;
 			if(g_addon->GetSetting("disable_realtime_indicator", &bvalue)) g_settings.disable_realtime_indicator = bvalue;
 
 			// Create the global guicallbacks instance
@@ -1991,18 +1854,6 @@ ADDON_STATUS ADDON_SetSetting(char const* name, void const* value)
 		}
 	}
 
-	// verbose_transfer_logging
-	//
-	else if(strcmp(name, "verbose_transfer_logging") == 0) {
-
-		bool bvalue = *reinterpret_cast<bool const*>(value);
-		if(bvalue != g_settings.verbose_transfer_logging) {
-
-			g_settings.verbose_transfer_logging = bvalue;
-			log_notice(__func__, ": setting verbose_transfer_logging changed to ", (bvalue) ? "true" : "false");
-		}
-	}
-
 	// disable_realtime_indicator
 	//
 	else if(strcmp(name, "disable_realtime_indicator") == 0) {
@@ -2506,29 +2357,20 @@ PVR_ERROR GetChannelGroups(ADDON_HANDLE handle, bool radio)
 	// The PVR doesn't support radio channel groups
 	if(radio) return PVR_ERROR::PVR_ERROR_NO_ERROR;
 
-	// Create a copy of the current addon settings structure
-	struct addon_settings settings = copy_settings();
-
-	// Log the request if verbose_disovery_logging has been enabled
-	if(settings.verbose_transfer_logging) log_notice(__func__, ": Channel group data requested");
-
 	PVR_CHANNEL_GROUP group;
 	memset(&group, 0, sizeof(PVR_CHANNEL_GROUP));
 
 	// Favorite Channels
 	snprintf(group.strGroupName, std::extent<decltype(group.strGroupName)>::value, "Favorite Channels");
 	g_pvr->TransferChannelGroup(handle, &group);
-	if(settings.verbose_transfer_logging) log_transfer_channelgroup(group);
 
 	// HD Channels
 	snprintf(group.strGroupName, std::extent<decltype(group.strGroupName)>::value, "HD Channels");
 	g_pvr->TransferChannelGroup(handle, &group);
-	if(settings.verbose_transfer_logging) log_transfer_channelgroup(group);
 
 	// SD Channels
 	snprintf(group.strGroupName, std::extent<decltype(group.strGroupName)>::value, "SD Channels");
 	g_pvr->TransferChannelGroup(handle, &group);
-	if(settings.verbose_transfer_logging) log_transfer_channelgroup(group);
 
 	return PVR_ERROR::PVR_ERROR_NO_ERROR;
 }
@@ -2571,9 +2413,6 @@ PVR_ERROR GetChannelGroupMembers(ADDON_HANDLE handle, PVR_CHANNEL_GROUP const& g
 		// Pull a database connection out from the connection pool
 		connectionpool::handle dbhandle(g_connpool);
 
-		// Log the request if verbose_disovery_logging has been enabled
-		if(settings.verbose_transfer_logging) log_notice(__func__, ": Channel group member data requested");
-
 		// Enumerate all of the channels in the specified group
 		enumerator(dbhandle, settings.show_drm_protected_channels, [&](union channelid const& item) -> void {
 
@@ -2589,19 +2428,9 @@ PVR_ERROR GetChannelGroupMembers(ADDON_HANDLE handle, PVR_CHANNEL_GROUP const& g
 			// Copy the PVR_CHANNEL_GROUP_MEMBER into the local vector<>
 			members.push_back(std::move(member));
 		});
-	}
 
-	catch(std::exception& ex) { return handle_stdexception(__func__, ex, PVR_ERROR::PVR_ERROR_FAILED); }
-	catch(...) { return handle_generalexception(__func__, PVR_ERROR::PVR_ERROR_FAILED); }
-
-	try {
-
-		for(auto const& it : members) {
-
-			// Transfer the generated PVR_CHANNEL_GROUP_MEMBER structure over to Kodi and log if enabled
-			g_pvr->TransferChannelGroupMember(handle, &it);
-			if(settings.verbose_transfer_logging) log_transfer_channelgroupmember(it);
-		}
+		// Transfer the generated PVR_CHANNEL_GROUP_MEMBER structure over to Kodi
+		for(auto const& it : members) g_pvr->TransferChannelGroupMember(handle, &it);
 	}
 
 	catch(std::exception& ex) { return handle_stdexception(__func__, ex, PVR_ERROR::PVR_ERROR_FAILED); }
@@ -2671,9 +2500,6 @@ PVR_ERROR GetChannels(ADDON_HANDLE handle, bool radio)
 		// Pull a database connection out from the connection pool
 		connectionpool::handle dbhandle(g_connpool);
 
-		// Log the request if verbose_disovery_logging has been enabled
-		if(settings.verbose_transfer_logging) log_notice(__func__, ": Channel data requested");
-
 		// Enumerate all of the channels in the database
 		enumerate_channels(dbhandle, settings.prepend_channel_numbers, settings.show_drm_protected_channels, [&](struct channel const& item) -> void {
 
@@ -2709,21 +2535,11 @@ PVR_ERROR GetChannels(ADDON_HANDLE handle, bool radio)
 			// Copy the PVR_CHANNEL structure into the local vector<>
 			channels.push_back(channel);
 		});
+
+		// Transfer the generated PVR_CHANNEL structure over to Kodi 
+		for(auto const& it : channels) g_pvr->TransferChannelEntry(handle, &it);
 	}
 	
-	catch(std::exception& ex) { return handle_stdexception(__func__, ex, PVR_ERROR::PVR_ERROR_FAILED); }
-	catch(...) { return handle_generalexception(__func__, PVR_ERROR::PVR_ERROR_FAILED); }
-
-	try {
-
-		for(auto const& it : channels) {
-
-			// Transfer the generated PVR_CHANNEL structure over to Kodi and log if enabled
-			g_pvr->TransferChannelEntry(handle, &it);
-			if(settings.verbose_transfer_logging) log_transfer_channel(it);
-		}
-	}
-
 	catch(std::exception& ex) { return handle_stdexception(__func__, ex, PVR_ERROR::PVR_ERROR_FAILED); }
 	catch(...) { return handle_generalexception(__func__, PVR_ERROR::PVR_ERROR_FAILED); }
 
@@ -2849,9 +2665,6 @@ PVR_ERROR GetRecordings(ADDON_HANDLE handle, bool deleted)
 		// Pull a database connection out from the connection pool
 		connectionpool::handle dbhandle(g_connpool);
 
-		// Log the request if verbose_disovery_logging has been enabled
-		if(settings.verbose_transfer_logging) log_notice(__func__, ": Recording data requested");
-
 		// Enumerate all of the recordings in the database
 		enumerate_recordings(dbhandle, settings.use_episode_number_as_title, [&](struct recording const& item) -> void {
 
@@ -2920,21 +2733,11 @@ PVR_ERROR GetRecordings(ADDON_HANDLE handle, bool deleted)
 			// Copy the PVR_RECORDING structure into the local vector<>
 			recordings.push_back(recording);
 		});
+
+		// Transfer the generated PVR_RECORDING structure over to Kodi 
+		for(auto const& it : recordings) g_pvr->TransferRecordingEntry(handle, &it);
 	}
 	
-	catch(std::exception& ex) { return handle_stdexception(__func__, ex, PVR_ERROR::PVR_ERROR_FAILED); }
-	catch(...) { return handle_generalexception(__func__, PVR_ERROR::PVR_ERROR_FAILED); }
-
-	try { 
-
-		for(auto const& it : recordings) {
-
-			// Transfer the generated PVR_RECORDING structure over to Kodi and log if enabled
-			g_pvr->TransferRecordingEntry(handle, &it);
-			if(settings.verbose_transfer_logging) log_transfer_recording(it);
-		}
-	}
-
 	catch(std::exception& ex) { return handle_stdexception(__func__, ex, PVR_ERROR::PVR_ERROR_FAILED); }
 	catch(...) { return handle_generalexception(__func__, PVR_ERROR::PVR_ERROR_FAILED); }
 
@@ -3222,16 +3025,10 @@ PVR_ERROR GetTimers(ADDON_HANDLE handle)
 	// connection isn't open any longer than necessary
 	std::vector<PVR_TIMER> timers;
 
-	// Create a copy of the current addon settings structure
-	struct addon_settings settings = copy_settings();
-
 	try {
 
 		// Pull a database connection out from the connection pool
 		connectionpool::handle dbhandle(g_connpool);
-
-		// Log the request if verbose_disovery_logging has been enabled
-		if(settings.verbose_transfer_logging) log_notice(__func__, ": Timer data requested");
 
 		// Enumerate all of the recording rules in the database
 		enumerate_recordingrules(dbhandle, [&](struct recordingrule const& item) -> void {
@@ -3328,21 +3125,11 @@ PVR_ERROR GetTimers(ADDON_HANDLE handle)
 			// Copy the PVR_TIMER structure into the local vector<>
 			timers.push_back(timer);
 		});
+
+		// Transfer the generated PVR_TIMER structure over to Kodi
+		for(auto const& it : timers) g_pvr->TransferTimerEntry(handle, &it);
 	}
 	
-	catch(std::exception& ex) { return handle_stdexception(__func__, ex, PVR_ERROR::PVR_ERROR_FAILED); }
-	catch(...) { return handle_generalexception(__func__, PVR_ERROR::PVR_ERROR_FAILED); }
-
-	try { 
-
-		for(auto const& it : timers) {
-
-			// Transfer the generated PVR_TIMER structure over to Kodi and log if enabled
-			g_pvr->TransferTimerEntry(handle, &it);
-			if(settings.verbose_transfer_logging) log_transfer_timer(it);
-		}
-	}
-
 	catch(std::exception& ex) { return handle_stdexception(__func__, ex, PVR_ERROR::PVR_ERROR_FAILED); }
 	catch(...) { return handle_generalexception(__func__, PVR_ERROR::PVR_ERROR_FAILED); }
 
